--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/rules/kubernetes_alerts.yaml
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/rules/kubernetes_alerts.yaml
@@ -185,7 +185,7 @@ spec:
         "message": "Job {{ $labels.namespace }}/{{ $labels.job_name }} failed to complete."
         "runbook_url": "https://github.com/kubernetes-monitoring/kubernetes-mixin/tree/master/runbook.md#alert-name-kubejobfailed"
       "expr": |
-        kube_job_status_failed{job="kube-state-metrics"}  > 0
+        kube_job_failed{job="kube-state-metrics"}  > 0
       "for": "15m"
       "labels":
         "severity": "warning"
