Switch to default python3

--- a/ansible/install_applications/roles/auth-openldap.deploy/tasks/main.yml
+++ b/ansible/install_applications/roles/auth-openldap.deploy/tasks/main.yml
@@ -3,7 +3,7 @@
 - name: Install python dependencies
   apt:
     pkg:
-    - python-ldap
+    - python3-ldap
     state: present
 
 - name: Read certificate files
