--- a/ansible/install_infra/roles/kubernetes-ansible/tasks/main.yml
+++ b/ansible/install_infra/roles/kubernetes-ansible/tasks/main.yml
@@ -3,11 +3,11 @@
 - name: Install python dependencies
   apt:
     pkg:
-    - python-pip
-    - python-setuptools
-    - python-docker
-    - python-passlib
-    - python-bcrypt
+    - python3-pip
+    - python3-setuptools
+    - python3-docker
+    - python3-passlib
+    - python3-bcrypt
     state: present
 
 - name: Install pip dependencies
