Fix keys() being a view and not a list

--- a/ansible/install_applications/roles/logging-kibana.deploy/tasks/type_mapping_workaround.yml
+++ b/ansible/install_applications/roles/logging-kibana.deploy/tasks/type_mapping_workaround.yml
@@ -21,7 +21,7 @@
 
 - name: Extract Kibana index real name
   set_fact:
-    kibana_index_real_name: "{{ kibana_mapping_result.json.keys()[0] }}"
+    kibana_index_real_name: "{{ kibana_mapping_result.json.keys() | first }}"
 
 - name: Workaround the Kibana mapping issue
   uri:
