--- a/ansible/install_applications/roles/infra-reloader.deploy/app/deploy/clusterRole.yaml
+++ b/ansible/install_applications/roles/infra-reloader.deploy/app/deploy/clusterRole.yaml
@@ -1,4 +1,4 @@
-apiVersion: rbac.authorization.k8s.io/v1beta1
+apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   name: reloader-role
@@ -27,4 +27,3 @@ rules:
       - get
       - update
       - patch
-
