--- a/ansible/install_applications/roles/infra-reloader.deploy/app/deploy/clusterRoleBinding.yaml
+++ b/ansible/install_applications/roles/infra-reloader.deploy/app/deploy/clusterRoleBinding.yaml
@@ -1,4 +1,4 @@
-apiVersion: rbac.authorization.k8s.io/v1beta1
+apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   name: reloader-role-binding
@@ -13,4 +13,3 @@ subjects:
   - kind: ServiceAccount
     name: reloader
     namespace: default
-
