--- a/ansible/install_applications/roles/logging-fluentbit.deploy/app/deploy/role.yaml
+++ b/ansible/install_applications/roles/logging-fluentbit.deploy/app/deploy/role.yaml
@@ -1,10 +1,10 @@
-apiVersion: rbac.authorization.k8s.io/v1beta1
+apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   name: fluent-bit-read
 rules:
-- apiGroups: [""]
-  resources:
-  - namespaces
-  - pods
-  verbs: ["get", "list", "watch"]
+  - apiGroups: [""]
+    resources:
+      - namespaces
+      - pods
+    verbs: ["get", "list", "watch"]
