--- a/ansible/install_applications/roles/logging-fluentbit.deploy/app/deploy/roleBinding.yaml
+++ b/ansible/install_applications/roles/logging-fluentbit.deploy/app/deploy/roleBinding.yaml
@@ -1,4 +1,4 @@
-apiVersion: rbac.authorization.k8s.io/v1beta1
+apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   name: fluent-bit-read
@@ -7,6 +7,6 @@ roleRef:
   kind: ClusterRole
   name: fluent-bit-read
 subjects:
-- kind: ServiceAccount
-  name: fluent-bit
-  namespace: logging
+  - kind: ServiceAccount
+    name: fluent-bit
+    namespace: logging
