--- a/ansible/install_applications/roles/infra-docker-registry.deploy/defaults/main.yml
+++ b/ansible/install_applications/roles/infra-docker-registry.deploy/defaults/main.yml
@@ -6,7 +6,7 @@ docker_registry_notification_endpoints:
   - name: docker-registry-ui
     url: http://docker-registry-ui.default:8000/docker-regitry-ui/api/events
     headers:
-      Authorization: Bearer {{ docker_registry_ui.event_api_token }}
+      Authorization: Bearer {{ _docker_registry_ui_var_loader.event_api_token }}
     timeout: 1s
     threshold: 5
     backoff: 10s
