--- a/ansible/install_applications/vars/infra-reloader.yml
+++ b/ansible/install_applications/vars/infra-reloader.yml
@@ -1,11 +1,18 @@
 ---
 
+# To avoid loops inside reloader
+_reloader_var_loader:
+  base_image:
+    name: "stakater/reloader"
+    tag: "v0.0.40"
+
 reloader:
   enabled: "{{ reloader_enabled | default(True) }}"
 
+  base_image: "{{ _reloader_var_loader.base_image }}"
+
   container:
-    image: "stakater/reloader"
-    tag: "v0.0.40"
+    image: "{{ docker_registry.url }}/{{ _reloader_var_loader.base_image.name | regex_replace('.*/', '') }}:{{ _reloader_var_loader.base_image.tag }}"
     requests_cpu: "{{ reloader_container_requests_cpu | default('100m') }}"
     requests_memory: "{{ reloader_container_requests_memory | default('128Mi') }}"
     limits_cpu: "{{ reloader_container_limits_cpu | default('250m') }}"
