--- a/ansible/install_applications/roles/auth-openldap.deploy/tasks/main.yml
+++ b/ansible/install_applications/roles/auth-openldap.deploy/tasks/main.yml
@@ -1,5 +1,11 @@
 ---
 
+- name: Ensure OpenLDAP image is up-to-date in the private registry
+  import_tasks: ../../_base.deploy/tasks/docker-image-private-registry.yml
+  vars:
+    base_image: "{{ openldap.base_image }}"
+    private_image: "{{ openldap.container.image }}"
+
 - name: Install python dependencies
   apt:
     pkg:
