--- a/ansible/install_applications/vars/auth-phpldapadmin.yml
+++ b/ansible/install_applications/vars/auth-phpldapadmin.yml
@@ -1,11 +1,18 @@
 ---
 
+# To avoid loops inside phpldapadmin
+_phpldapadmin_var_loader:
+  base_image:
+    name: "osixia/phpldapadmin"
+    tag: "0.8.0"
+
 phpldapadmin:
   enabled: "{{ openldap_enabled | default(True) }}"
 
+  base_image: "{{ _phpldapadmin_var_loader.base_image }}"
+
   container:
-    image: "osixia/phpldapadmin"
-    tag: "0.8.0"
+    image: "{{ docker_registry.url }}/{{ _phpldapadmin_var_loader.base_image.name | regex_replace('.*/', '') }}:{{ _phpldapadmin_var_loader.base_image.tag }}"
     requests_cpu: "{{ phpldapadmin_container_requests_cpu | default('100m') }}"
     requests_memory: "{{ phpldapadmin_container_requests_memory | default('256Mi') }}"
     limits_cpu: "{{ phpldapadmin_container_limits_cpu | default('200m') }}"
