--- a/ansible/install_applications/vars/logging-fluentd.yml
+++ b/ansible/install_applications/vars/logging-fluentd.yml
@@ -1,13 +1,18 @@
 ---
 
+# To avoid loops inside fluentd
+_fluentd_var_loader:
+  base_image:
+    name: "fluent/fluentd"
+    tag: "v1.7.0-debian-1.0"
+
 fluentd:
   enabled: "{{ fluentd_enabled | default(True) }}"
 
+  base_image: "{{ _fluentd_var_loader.base_image }}"
+
   container:
-    image: "{{ docker_registry.url }}/fluentd"
-    tag: "latest"
-    from_image: "fluent/fluentd"
-    from_tag: "v1.7.0-debian-1.0"
+    image: "{{ docker_registry.url }}/{{ _fluentd_var_loader.base_image.name | regex_replace('.*/', '') }}:{{ _fluentd_var_loader.base_image.tag }}-custom"
     requests_cpu: "{{ fluentd_container_requests_cpu | default('100m') }}"
     requests_memory: "{{ fluentd_container_requests_memory | default('200Mi') }}"
     limits_cpu: "{{ fluentd_container_limits_cpu | default('500m') }}"
