--- a/ansible/install_applications/vars/monitoring-nginx-exporter.yml
+++ b/ansible/install_applications/vars/monitoring-nginx-exporter.yml
@@ -1,11 +1,18 @@
 ---
 
+# To avoid loops inside nginx_exporter
+_nginx_exporter_var_loader:
+  base_image:
+    name: "nginx/nginx-prometheus-exporter"
+    tag: "0.4.2"
+
 nginx_exporter:
   enabled: "{{ nginx_exporter_enabled | default(True) }}"
 
+  base_image: "{{ _nginx_exporter_var_loader.base_image }}"
+
   container:
-    image: "nginx/nginx-prometheus-exporter"
-    tag: "0.4.2"
+    image: "{{ docker_registry.url }}/{{ _nginx_exporter_var_loader.base_image.name | regex_replace('.*/', '') }}:{{ _nginx_exporter_var_loader.base_image.tag }}"
     requests_cpu: "{{ nginx_exporter_container_requests_cpu | default('25m') }}"
     requests_memory: "{{ nginx_exporter_container_requests_memory | default('64Mi') }}"
     limits_cpu: "{{ nginx_exporter_container_limits_cpu | default('25m') }}"
