--- a/ansible/install_applications/roles/monitoring-nginx-log-exporter.deploy/tasks/main.yml
+++ b/ansible/install_applications/roles/monitoring-nginx-log-exporter.deploy/tasks/main.yml
@@ -1,5 +1,11 @@
 ---
 
+- name: Ensure nginx log exporter image is up-to-date in the private registry
+  import_tasks: ../../_base.deploy/tasks/docker-image-private-registry.yml
+  vars:
+    base_image: "{{ nginx_log_exporter.base_image }}"
+    private_image: "{{ nginx_log_exporter.container.image }}"
+
 - name: Deploy nginx log exporter
   k8s:
     definition: "{{ lookup(item | regex_search('.j2$') | ternary('template','file'), item) }}"
