--- a/ansible/install_applications/vars/monitoring-nginx-log-exporter.yml
+++ b/ansible/install_applications/vars/monitoring-nginx-log-exporter.yml
@@ -1,12 +1,19 @@
 ---
 
+# To avoid loops inside nginx_log_exporter
+_nginx_log_exporter_var_loader:
+  base_image:
+    repo: quay.io
+    name: "martinhelmich/prometheus-nginxlog-exporter"
+    tag: "v1.3.0"
+
 nginx_log_exporter:
   enabled: "{{ nginx_log_exporter_enabled | default(True) }}"
 
+  base_image: "{{ _nginx_log_exporter_var_loader.base_image }}"
+
   container:
-    repo: quay.io
-    image: "martinhelmich/prometheus-nginxlog-exporter"
-    tag: "v1.3.0"
+    image: "{{ docker_registry.url }}/{{ _nginx_log_exporter_var_loader.base_image.name | regex_replace('.*/', '') }}:{{ _nginx_log_exporter_var_loader.base_image.tag }}"
     requests_cpu: "{{ nginx_log_exporter_container_requests_cpu | default('25m') }}"
     requests_memory: "{{ nginx_log_exporter_container_requests_memory | default('64Mi') }}"
     limits_cpu: "{{ nginx_log_exporter_container_limits_cpu | default('25m') }}"
