--- a/ansible/install_applications/roles/monitoring-release-watcher.deploy/tasks/main.yml
+++ b/ansible/install_applications/roles/monitoring-release-watcher.deploy/tasks/main.yml
@@ -6,15 +6,12 @@
     repo: "{{ release_watcher.repo.url }}"
     version: "{{ release_watcher.repo.version }}"
 
-- name: Build and push release-watcher image
-  docker_image:
-    name: "{{ docker_registry.url }}/release-watcher"
-    source: build
-    build:
-      path: "{{ release_watcher.path }}"
-      pull: yes
-    force_source: yes
-    push: yes
+- name: Ensure release-watcher image is up-to-date in the private registry
+  import_tasks: ../../_base.deploy/tasks/docker-image-private-registry.yml
+  vars:
+    private_image: "{{ release_watcher.container.image }}"
+    build: yes
+    build_path: "{{ release_watcher.path }}"
 
 - name: Deploy release-watcher
   k8s:
