--- a/ansible/install_applications/vars/monitoring-apcups-exporter.yml
+++ b/ansible/install_applications/vars/monitoring-apcups-exporter.yml
@@ -1,21 +1,29 @@
 ---
 
+# To avoid loops inside apcups_exporter
+_apcups_exporter_var_loader:
+  base_image_build:
+    name: golang
+    tag: 1.12.7-alpine3.10
+  base_image:
+    name: alpine
+    tag: 3.10.1
+  repo:
+    url: "https://github.com/mdlayher/apcupsd_exporter"
+    version: "cbd49beaf01f4d70f33ce64ada787e73d8e9ea06"
+
 apcups_exporter:
   enabled: "{{ apcups_exporter_enabled | default(True) }}"
 
+  base_image: "{{ _apcups_exporter_var_loader.base_image }}"
+  base_image_build: "{{ _apcups_exporter_var_loader.base_image_build }}"
+
   container:
-    image: "{{ docker_registry.url }}/apcups-exporter"
-    tag: "latest"
-    from_image_build: golang
-    from_tag_build: 1.12.7-alpine3.10
-    from_image: alpine
-    from_tag: 3.10.1
+    image: "{{ docker_registry.url }}/apcups-exporter:{{ _apcups_exporter_var_loader.repo.version }}-custom"
     requests_cpu: "{{ apcups_exporter_container_requests_cpu | default('25m') }}"
     requests_memory: "{{ apcups_exporter_container_requests_memory | default('64Mi') }}"
     limits_cpu: "{{ apcups_exporter_container_limits_cpu | default('100m') }}"
     limits_memory: "{{ apcups_exporter_container_limits_memory | default('64Mi') }}"
 
-  repo:
-    url: "https://github.com/mdlayher/apcupsd_exporter"
-    version: "cbd49beaf01f4d70f33ce64ada787e73d8e9ea06"
+  repo: "{{ _apcups_exporter_var_loader.repo }}"
     
